# SiteRust

./: .gitignore  Cargo.toml
src/: main.rs  models.rs
static/: script.js  styles.css
templates/: index.html
