[package]
name = "my_website"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"             # web
tokio = { version = "1", features = ["full"] }  # Asyn runtime
reqwest = { version = "0.11", features = ["json"] }  # HTTP-client for API
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"       # Робота з JSON
tower-http = "0.3"     